Homepage current in development set

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 	<head>
 		<meta charset="utf-8"> <!--ADD SUPPORT FOR PT-BR-->
-		<title>Programming-Learning Ambient</title>
+		<title>MyHomePage</title>
 		<link rel="stylesheet" href="css/main.css" />
 		<link rel="stylesheet" href="css/animate.css" />
 	</head>
@@ -10,8 +10,8 @@
 		<header>
 			<div class="links_btn">	<!--BTN LINKS GITHUB & LINKEDIN-->
 				<ul>
-					<li title="Clique para acessar o Github!"><a href="https://github.com/KevinyTeixeira"><img src="images/github.png"></a></li>
-					<li title="Clique para acessar o Linkedin!"><a href="https://www.linkedin.com/in/keviny-teixeira-863128101/"><img src="images/linkedin.png"></a></li>
+					<li title="Click to access Github!"><a href="https://github.com/KevinyTeixeira"><img src="images/github.png"></a></li>
+					<li title="Click to access Linkedin!"><a href="https://www.linkedin.com/in/keviny-teixeira-863128101/"><img src="images/linkedin.png"></a></li>
 				</ul>
 			</div>
 			<div class="language_btn">	<!--BTN LANGUAGES PT & EN-->
@@ -32,26 +32,13 @@
 			</div>
 			<div align="justify">
 				<ul class="text-box-header">
-					<p>#Esta página foi criada com o objetivo apresentar um ambiente intuitivo sobre os aprendizados que são disponibilizados no meu Github. Aproveite!</br></br></p>
+					<p>#Home page about Programming Learn Project!</br></br></p>
 					<p align="right"><b>- KevinyTeixeira</p></b>
 				</ul>
 				</br></br></br></br></br></br>
 				<p></p>
 				<ul class="text-box-content">
-					<b>SOBRE MIM</b></br></br>
-					<p>Atualmente estudo na <a style="color:#42B8CA;" href="https://ucb.catolica.edu.br/"><b>Universidade Católica de Brasília(UCB)</b></a> e curso <b>Análise e Desenvolvimento de Sistemas</b>. Eu sempre fui muito ambicioso com relação a tudo o que envolve tecnologia, gosto de programação, de entender hardware e software dos diferentes dispositivos no mercado, os impactos que resultam no desempenho dos dispositivos, de ter domínio sobre a tecnologia que existe à disposição. Tenho muito interesse em assuntos como Inteligência Artificial, IOT, Ciência de Dados, e áreas que geram resultados visíveis e perceptíveis com facilidade, praticidade. Mesmo sem ter conhecimento suficiente na área, já me aventurei em fazer ajustes em códigos de programação LUA para um jogo que tentei recriar como um projeto de hobby, também já me aventurei em usar a criatividade para tentar criar uma versão modificada de Super Mario World por pura diversão!</br></br></p>
-					<p>Ainda estou caminhando na medida do possível para aprender as linguagens de programação e gerar resultados. Esta página, já é um exemplo do resultado pela minha busca de facilitar a vida do usuário por trás da tela. Abaixo estão listadas as linguagens que estão no meu rol de aprendizagem:</p>
-						<ul style="margin: 0 0 0 20px">
-							<li>1. Java;</li>
-							<li>2. JavaScript;</li>
-							<li>3. Python;</li>
-							<li>4. Java;</li>
-							<li>5. C#;</li>
-							<li>6. C++;</li>
-							<li>7. C;</li>
-							<li>8. PHP;</li>
-							<li>9. Ruby;</li>
-						</ul>
+					<p align="center">Current in development...</p>
 				</ul>
 
 				<!--<h1>Programming-Learning Ambient</h1>-->
