--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8"> <!--ADD SUPPORT FOR PT-BR-->
 		<title>MyHomePage</title>
+		<link rel="shortcut icon" type="image" href="images/icon.png"/>
 		<link rel="stylesheet" href="css/main.css" />
 		<link rel="stylesheet" href="css/animate.css" />
 	</head>
@@ -16,8 +17,8 @@
 			</div>
 			<div class="language_btn">	<!--BTN LANGUAGES PT & EN-->
 				<ul>
-					<li><a href="#" class="btn"><img src="images/pt.png" title="Português"></a></li>
-					<li><a href="#" class="btn"><img src="images/usa.png" title="English"></a></li>
+					<li><a href="?idioma=pt-br.php" class="btn"><img src="images/pt.png" title="Português"></a></li>
+					<li><a href="?idioma=en-us.php" class="btn"><img src="images/usa.png" title="English"></a></li>
 				</ul>
 			</div>
 			<div class="programming">	<!--PROGRAMMING LANGUAGES-->
@@ -40,7 +41,6 @@
 				<ul class="text-box-content">
 					<p align="center">Current in development...</p>
 				</ul>
-
 				<!--<h1>Programming-Learning Ambient</h1>-->
 		</header>
 	<!--<script src="app.js"></script>-->
